--- a/Views/AdminOperations/AddLayOutData.cshtml
+++ b/Views/AdminOperations/AddLayOutData.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 @section Styles{
+    <link rel="stylesheet" href="/css/create-agents.css">
     <link rel="stylesheet" href="/css/add-layout.css">
 }
 <section class="new-book">
@@ -35,10 +36,10 @@
                                 </span>
                             </div>
                         </div>
-
+                            
                     </div>
                     <div class="text-center mt-3">
-                        <button type="submit" class="btn agent-submit-btn">Submit</button>
+                        <button type="submit" class="btn btn-success  agent-submit-btn">Submit</button>
                     </div>
                 </form>
             </div>
