--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,12 +31,9 @@
     </div>
     <section class="main-body">
         <header>
-
             <div class="container">
                 <div class="row">
-
                     <div class="col-md-12">
-
                         <nav>
                             <img src="/img/logo.png" class="img-fluid logo-main">
                             <ul class="navbar-nav ml-md-auto ml-0 desktop-menu">
@@ -58,20 +55,13 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Booking</a>
-                                    <ul class="dropdown-menu">
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Current Booking</a>
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Previous Booking</a>
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Cancel Booking</a>
-                                    </ul>
+                                    <a class="nav-link" asp-action="MyBookings" asp-controller="AgentOperations">My Booking</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="Logout" asp-controller="AgentLogin">Logout</a>
                                 </li>
                             </ul>
                         </nav>
-
-
                     </div>
                 </div>
             </div>
@@ -101,12 +91,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Booking</a>
-                                    <ul class="dropdown-menu">
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Current Booking</a>
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Previous Booking</a>
-                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Cancel Booking</a>
-                                    </ul>
+                                    <a class="nav-link" asp-action="MyBookings" asp-controller="AgentOperations">My Booking</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="Logout" asp-controller="AgentLogin">Logout</a>
