--- a/Views/AdminLogin/Index.cshtml
+++ b/Views/AdminLogin/Index.cshtml
@@ -25,7 +25,7 @@
                 <div class="col-md-7">
                     <div class="login-block mb-3">
                         <div class="login-title">
-                            <h3 class="titleh3">Login</h3>
+                            <h3 class="titleh3">Welcome Administrator</h3>
                         </div>
                         <div class="form my-5">
                             <form method="post" asp-controller="AdminLogin" asp-action="Index">
