--- a/wwwroot/css/agents.css
+++ b/wwwroot/css/agents.css
@@ -186,7 +186,7 @@ padding: 10px 0px;
 {
   color: #fff;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 14px;
 }
 .navbar-nav > .nav-item > .nav-link:hover,
 .navbar-nav > .nav-item > .nav-link:focus  
@@ -505,6 +505,10 @@ border-radius: 50%;
   {
     margin-left: 15px;
     width: 180px;
+  }
+  .navbar-nav > .nav-item > .nav-link 
+  {
+    font-size: 10px;
   }
 }
 @media screen and (max-width: 767px)
