--- a/wwwroot/css/layout-1.css
+++ b/wwwroot/css/layout-1.css
@@ -38,10 +38,10 @@ cursor: pointer;
 {
 fill: #f44336 !important;
 }
-.bg-booked {
-    fill: #dc3545 !important;
-}
 
+.bg-booked {
+    fill: blue !important;
+}
 .st0{clip-path:url(#SVGID_2_);fill:none;stroke:#000000;stroke-width:0;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 	
 .st1{clip-path:url(#SVGID_2_);fill:none;stroke:#000000;stroke-width:0.48;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
@@ -292,7 +292,7 @@ padding: 10px 0px;
 {
   color: #fff;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 14px;
 }
 .navbar-nav > .nav-item > .nav-link:hover,
 .navbar-nav > .nav-item > .nav-link:focus  
@@ -709,6 +709,10 @@ span
   .logo-main 
   {
     margin-left: 15px;
+  }
+  .navbar-nav > .nav-item > .nav-link 
+  {
+    font-size: 10px;
   }
 }
 @media screen and (max-width: 767px)
